--- a/public/style.css
+++ b/public/style.css
@@ -1,6 +1,6 @@
-.contact-form .error input{
-    border-bottom: 2px solid red;
+.error input{
+    border: 2px solid red;
 }
-.contact-form .error textarea{
-    border-bottom: 2px solid red;
+.error textarea{
+    border: 2px solid red;
 }
